# Karagozian-Case

./: CMakeLists.txt  README.md  nearest  nearest_neighbor.cpp  superwordsearch.cpp  wordsearch
src/: points.txt
